fix: correct whitespace

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -46,6 +46,9 @@
   font-family: Arial;
   font-size: 16pt;
   color: white;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
   background-color: #7c7c7c;
 }
 .content__text_on {
@@ -60,14 +63,22 @@
   text-align: center;
   color: white;
   background-color: #7C002F;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
 }
 .content__img, .content__img_on {
-  width: 95%;
+  width: 90%;
+  height: 20%;
 }
 .content__desc {
+  width: 90%;
   margin: 5px 0 40px 0;
   font-family: Arial;
   font-size: 16pt;
+  -ms-word-break: break-all;
+  word-break: break-all;
+  word-break: break-word;
   visibility: hidden;
 }
 
@@ -75,6 +86,11 @@
   display: none;
 }
 
+@media screen and (-ms-high-contrast: active), (-ms-high-contrast: none) {
+  .switch {
+    left: 25%;
+  }
+}
 .switch {
   height: 32px;
   background: #E5E5E5;
